<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <ImageView
        android:id="@+id/imagenfondo"
        android:layout_width="0dp"
        android:layout_height="195dp"
        android:layout_marginTop="-24dp"
        android:contentDescription="@string/IMAGEN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fotoinfo" />

    <TextView
        android:id="@+id/txtGitHub"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:autoLink="web"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/github"
        app:layout_constraintBottom_toBottomOf="@+id/imageGithub"
        app:layout_constraintStart_toEndOf="@+id/imageGithub"
        app:layout_constraintTop_toTopOf="@+id/imageGithub"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt4Info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txt4Info"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageInstagram" />

    <TextView
        android:id="@+id/txtRRSS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txt3Info"
        android:textColor="#616161"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/txtEmail"
        android:textColor="#191919"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2Info" />

    <TextView
        android:id="@+id/txt2Info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txt2Info"
        android:textColor="#616161"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDev" />

    <TextView
        android:id="@+id/txtDev"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/txtDev"
        android:textColor="#191919"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1Info" />

    <TextView
        android:id="@+id/txt1Info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txt1Info"
        android:textColor="#616161"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreApp" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/app_version"
        android:textColor="#191919"
        app:layout_constraintBottom_toBottomOf="@+id/nombreApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nombreApp" />

    <TextView
        android:id="@+id/nombreApp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#5EACACAC"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="24dp"
        android:text="@string/app_name"
        android:textColor="#191919"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenfondo" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/IMAGEN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logojrblanco"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageTwitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/IMAGEN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRRSS"
        app:srcCompat="@drawable/twitter"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txtTwitter"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:autoLink="web"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/twitter"
        android:textColor="#00838F"
        app:layout_constraintBottom_toBottomOf="@+id/imageTwitter"
        app:layout_constraintStart_toEndOf="@+id/imageTwitter"
        app:layout_constraintTop_toTopOf="@+id/imageTwitter"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/txtInstagram"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:autoLink="web"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/instagram"
        app:layout_constraintBottom_toBottomOf="@+id/imageInstagram"
        app:layout_constraintStart_toEndOf="@+id/imageInstagram"
        app:layout_constraintTop_toTopOf="@+id/imageInstagram"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/imageInstagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/IMAGEN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageTwitter"
        app:srcCompat="@drawable/instagram" />

    <ImageView
        android:id="@+id/imageGithub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/IMAGEN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt4Info"
        app:srcCompat="@drawable/github" />

    <Button
        android:id="@+id/bntOK"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="96dp"
        android:background="@drawable/boton_redondeado_azul"
        android:text="@string/botonOK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageGithub"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>